fix cropping not working on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,10 @@ body {
     margin: 1.5rem auto;
 }
 
-#canvas { cursor: pointer; }
+#canvas {
+    cursor: pointer;
+    touch-action: none;
+}
 
 @media(max-width: 800px) {
     .content .options-container {
